--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6  col-xs-offset-2 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12">
         <!--<div class="row top-buffer">
             <div class="col-md-offset-0 col-sm-offset-0">
               <img src="data/logo.png" class="logo login-logo" ></img>
