--- a/LandingPage.html
+++ b/LandingPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
+    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,10 +19,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
-    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6  col-xs-offset-2 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="row top-buffer">
             <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
                 <span class="glyphicon glyphicon-search search"></span>
@@ -32,37 +33,27 @@
             </div>
         </div>
         <hr width="100%"/>
-
-        <div class="row top-buffer"></div>
-
-
         <div class="row top-buffer">
-            <form class="form-horizontal">
                 <div class="panel panel-default">
                     <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
                 </div>
-
                 <div class="panel panel-default">
                     <div class="panel-body" id="boxes">DELIVERERS IN OUR NEAR AREA</div>
                 </div>
-                <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
-                    <div class="form-group">
-                        <button id="button" type="button" onclick="location.href='SenderPage.html'"
-                                class="btn btn-primary">
-                            SEND A PACK
-                        </button>
-                    </div>
-                    <div class="form-group">
-                        <button id="button" type="button" onclick="location.href='DeliverPage.html'"
-                                class="btn btn-primary">
-                            DELIVER A PACK
-                        </button>
-                    </div>
+                <form class="form-horizontal">
+                <div class="form-group">
+                    <button id="button" type="button" onclick="location.href='SenderPage.html'"
+                            class="btn btn-primary submit-button">SEND A PACK</button>
+                </div>
+                <div class="form-group">
+                    <button id="button" type="button" onclick="location.href='DeliverPage.html'"
+                            class="btn btn-primary submit-button">DELIVER A PACK</button>
                 </div>
             </form>
-            <div class="col-sm-offset-3 col-md-offset-3">
+            <div class="text-center">
                 <h5>PaczPaczCar 2018</h5>
             </div>
+        </div>
         </div>
     </div>
 </body>
