--- a/SenderPage.html
+++ b/SenderPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="data/SenderPage.css" type="text/css" rel="stylesheet"/>
+    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,10 +19,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <link href="data/SenderPage.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
-    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6 col-xs-offset-2 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="row top-buffer">
             <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
                 <span class="glyphicon glyphicon-search search"></span>
@@ -46,26 +47,21 @@
                     <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 4</li>
                     <li class="list-group-item"><span class="glyphicon glyphicon-user deli"></span> Deliverer 5</li>
                 </ul>
-
-
-                <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
                     <div class="form-group">
 
 
-                        <button id="button" class="btn btn-primary" type="button"
+                        <button id="button" class="btn btn-primary submit-button small-text" type="button"
                                 onclick="location.href='FulfillmentOfTheOrder_SenderPage.html'">
                             SEND A PACK
                         </button>
                     </div>
 
                     <div class="form-group">
-                        <button id="button" class="btn" type="button" onclick="location.href='LandingPage.html'">
-                            BACK TO LANDING PAGE
-                        </button>
+                        <button id="button" class="btn submit-button small-text" type="button" onclick="location.href='LandingPage.html'">BACK TO LANDING PAGE</button>
                     </div>
                 </div>
             </form>
-            <div class="col-sm-offset-4 col-md-offset-4">
+            <div class="text-center">
                 <h5>PaczPaczCar 2018</h5>
             </div>
         </div>
