--- a/ApplicationRegulationPage.html
+++ b/ApplicationRegulationPage.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group">
                     <div>
-                        <button type="submit" onclick="location.href='LoginPage.html'"
+                        <button type="submit" onclick="location.href='index.html'"
                                 class="btn btn-danger submit-button">Are you insane?
                         </button>
                     </div>
