--- a/ForgotPasswordPage.html
+++ b/ForgotPasswordPage.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="form-group">
                     <div class='top-buffer-large'>
-                        <button type="button" onclick="location.href='LoginPage.html'"
+                        <button type="button" onclick="location.href='index.html'"
                                 class="btn btn-primary submit-button">Change Passoword
                         </button>
                     </div>
