--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
-                    <h5><a href="ForgotPasswordPage.html">Forgot your Password?</a></h5>
+                        <h5><a href="ForgotPasswordPage.html">Forgot your Password?</a></h5>
                     </div>
                 </div>
                 <div class="form-group">
@@ -65,6 +65,7 @@
                     <div class="text-center">
                         <h5>PaczPaczCar 2018</h5>
                     </div>
+                </div>
             </form>
         </div>
     </div>
