--- a/SuccesDeliveryPage.html
+++ b/SuccesDeliveryPage.html
@@ -24,42 +24,33 @@
 <body>
 <div class="container">
     <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="row top-buffer">
-            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
-                <span class="glyphicon glyphicon-search search"></span>
-            </div>
-            <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                <span class="glyphicon glyphicon-user search"></span>
-            </div>
-        </div>
-        <hr width="100%"/>
-        <div class="row top-buffer"></div>
-
-        <div class="row top-buffer">
+        <div class="row top-buffer-large">
             <form class="form-horizontal">
-
-                <div class="panel panel-default">
-                    <div class="panel-body" id="boxes">
-                        <span class="glyphicon glyphicon-ok search"></span><br>
-                        <span>You succesfully order a package</span>
+                <div class="form-group">
+                    <div class="message-container">
+                        <div class="panel-body" id="boxes">
+                            <span class="glyphicon glyphicon-ok search"></span><br>
+                            <span>You successfully order a package!</span>
+                        </div>
                     </div>
                 </div>
-
-
-                <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
-                    <div class="form-group">
-                        <button type="button" onclick="location.href='DeliverPage.html'" class="btn btn-primary">
-                            CONTINUE ORDERING
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='DeliverPage.html'"
+                                class="btn btn-primary submit-button">Continue ordering
                         </button>
                     </div>
-                    <div class="form-group">
-                        <button type="button" onclick="location.href='LandingPage.html'" class="btn">
-                            GO TO MAIN MENU
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='LandingPage.html'"
+                                class="btn btn-primary submit-button">Go to main menu
                         </button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+</div>
 </body>
 </html>
