--- a/SuccesSendingPage.html
+++ b/SuccesSendingPage.html
@@ -5,59 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
     <link href="data/SuccessSending.css" type="text/css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
     <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="row top-buffer">
-            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
-                <span class="glyphicon glyphicon-search search"></span>
-            </div>
-            <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                <span class="glyphicon glyphicon-user search"></span>
-            </div>
-        </div>
-        <hr width="100%" />
-
-        <div class="row top-buffer"></div>
-
-
-        <div class="row top-buffer">
+        <div class="row top-buffer-large">
             <form class="form-horizontal">
-
-                <div class="panel panel-default">
-                    <div class="panel-body" id="boxes">
-                        <span class="glyphicon glyphicon-ok search"></span><br>
-                        <span>You succesfully send a package</span>
+                <div class="form-group">
+                    <div class="message-container">
+                        <div class="panel-body" id="boxes">
+                            <span class="glyphicon glyphicon-ok search"></span><br>
+                            <span>You successfully send a package!</span>
+                        </div>
                     </div>
                 </div>
-
-
-                <div class="col-sm-8 col-sm-offset-3 col-md-8 col-md-offset-3">
-                    <div class="form-group">
-                        <button  type="button" onclick="location.href='SenderPage.html'" class="btn btn-primary">
-                            CONTINUE SENDING
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='SenderPage.html'"
+                                class="btn btn-primary submit-button">Continue sending
                         </button>
                     </div>
-                    <div class="form-group">
-                        <button type="button" onclick="location.href='LandingPage.html'" class="btn">
-                            BACK TO MAIN MENU
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='LandingPage.html'"
+                                class="btn btn-primary submit-button">Go to main menu
                         </button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+</div>
 </body>
 </html>
