--- a/LandingPage.html
+++ b/LandingPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,39 +19,47 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<div class="container">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="row top-buffer">
-            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
-                <span class="glyphicon glyphicon-search search"></span>
-            </div>
-            <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                <span class="glyphicon glyphicon-user search"></span>
+<div class="container column-view">
+    <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
+        <div class="row search-bar">
+            <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
+                <div class="input-group">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-search search search-icon"></span></button>
+                      </span>
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-menu-hamburger search search-icon"></span></button>
+                  </span>
+                </div>
             </div>
         </div>
-        <hr width="100%"/>
+
+        </div>
         <div class="row top-buffer">
-                <div class="panel panel-default">
-                    <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-body" id="boxes">DELIVERERS IN OUR NEAR AREA</div>
-                </div>
-                <form class="form-horizontal">
+            <div class="panel panel-default">
+                <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-body" id="boxes">DELIVERERS IN OUR NEAR AREA</div>
+            </div>
+            <form class="form-horizontal">
                 <div class="form-group">
                     <button id="button" type="button" onclick="location.href='SenderPage.html'"
-                            class="btn btn-primary submit-button">SEND A PACK</button>
+                            class="btn btn-primary submit-button">SEND A PACK
+                    </button>
                 </div>
                 <div class="form-group">
                     <button id="button" type="button" onclick="location.href='DeliverPage.html'"
-                            class="btn btn-primary submit-button">DELIVER A PACK</button>
+                            class="btn btn-primary submit-button">DELIVER A PACK
+                    </button>
                 </div>
             </form>
         </div>
-        </div>
     </div>
+</div>
 </body>
 </html>
