--- a/SuccesSendingPage.html
+++ b/SuccesSendingPage.html
@@ -6,8 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
-    <link href="data/SuccessSending.css" type="text/css" rel="stylesheet"/>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -23,7 +22,22 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
+        <div class="row search-bar">
+            <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
+                <div class="input-group">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span
+                                class="glyphicon glyphicon-search search search-icon"></span></button>
+                      </span>
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span
+                                class="glyphicon glyphicon-menu-hamburger search search-icon"></span></button>
+                  </span>
+                </div>
+            </div>
+        </div>
         <div class="row top-buffer-large">
             <form class="form-horizontal">
                 <div class="form-group">
