Bootstrap update - fullfilment pages

--- a/FulfillmentOfTheOrder_SenderPage.html
+++ b/FulfillmentOfTheOrder_SenderPage.html
@@ -1,137 +1,201 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Fulfillment - SenderPage</title>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+    <title>Fulfillment - SenderPage</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link href="data/FulfillmentOfTheOrder_SenderPage.css" type="text/css" rel="stylesheet"/>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 
-	</head>
-	<body>
-			<div class="container">
-                <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <!--<div class="row top-buffer">
-    				    <div class="col-md-offset-0 col-sm-offset-0">
-                		  <img src="data/logo.png" class="logo login-logo" ></img>
-            		    </div>
-                    </div>-->
-                    <div class="row top-buffer">
-                        <form class="form-horizontal">
-                        	<div class="reset-margin-bottom form-group">
-                                <h3 class="media-heading">Please enter pack details</h3>
-                            </div>
-                            <!--<div class="container2">
-	                            <div class="row">
-		                            <div class="form-group offeredPrice col-md-6">
-		                        		<input id="offeredPrice" class="form-control" type="number" name="offeredPrice" value="OFFERED PRICE (PLN)">
-		                        	</div>
-		                        	<div class="form-group mass col-md-6">
-		                        		<input id="mass" class="form-control" type="number" name="mass" value="MASS (kg)">
-		                            </div>
-	                            </div>
-	                        </div>-->  
-	                        <div class="form-group">Offerd price
-                        		<input id="offeredPrice" class="form-control" type="text" name="offeredPrice" value="OFFERED PRICE (PLN)">
-                            </div>
-                            <div class="form-group">Pack Mass
-                        		<input id="mass" class="form-control" type="text" name="mass" value="MASS (kg)">
-                            </div>
-                            <div class="form-group">Pack Height
-                        		<input id="height" class="form-control" type="text" name="height" value="HEIGHT (cm)">
-                            </div>
-                            <div class="form-group">Pack Width
-                        		<input id="width" class="form-control" type="text" name="width" value="WIDTH (cm)">
-                            </div>
-                            <div class="form-group">Pack length
-                        		<input id="length" class="form-control" type="text" name="length" value="LENGTH (cm)">
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                                <h3>Deliver until:</h3>
-                            </div>
-                            <div class="form-group">
-                        		<input id="date" class="form-control" type="date" name="date">
-                            </div>
-
-                            <div class="reset-margin-bottom form-group">
-                                <h3>Deliver from:</h3>
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <div class="">
-                                    <button type="submit" class="btn btn-primary submit-button">LOCALIZE ME!</button>
-                                </div>
-                            </div>
-
-                              <div id="choose_button" class="form-group">
-                                <input class="form-control" type="button" value="CHOOSE OTHER LOCATION"">
-                            </div>
-
-                                <div id="div_ctrl" hidden>
-
-                                        <div class="form-group">Start city
-                                            <input id="city1" class="form-control" type="text" name="city2" value="CITY">
-                                        </div>
-                                        <div class="form-group">Start street
-                                            <input id="street1" class="form-control" type="text" name="street2" value="STREET">
-                                        </div>
-                                        <div class="form-group">Start number
-                                            <input id="number1" class="form-control" type="text" name="number2" value="NUMBER">
-                                        </div>
-                                        <div class="form-group">Start postal-code
-                                            <input id="postal1" class="form-control" type="text" name="postal2" value="POSTAL CODE">
-                                        </div>
-
-
-                                </div>
-
-                            <div class="reset-margin-bottom form-group">
-                                <h3>Deliver to:</h3>
-                            </div>
-                            <div class="form-group">Target city
-                        		<input id="city2" class="form-control" type="text" name="city2" value="CITY">
-                            </div>
-                            <div class="form-group">Target street
-                        		<input id="street2" class="form-control" type="text" name="street2" value="STREET">
-                            </div>
-                            <div class="form-group">Target number
-                        		<input id="number2" class="form-control" type="text" name="number2" value="NUMBER">
-                            </div>
-                            <div class="form-group">Target postal-code
-                        		<input id="postal2" class="form-control" type="text" name="postal2" value="POSTAL CODE">
-                            </div>
-                            <div class="form-group">
-                                <div class="">
-                                    <button type="button" onclick="location.href='SuccesSendingPage.html'" class="btn btn-primary submit-button">SUBMIT</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="">
-                                    <button type="button" onclick="location.href='SenderPage.html'" class="btn submit-button">CANCEL</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="center">
-                                <h5>PaczPaczCar 2018</h5>
-                            </div>
-                            </form>
-                        </div>    
+</head>
+<body>
+<div class="container">
+    <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
+        <div class="row search-bar">
+            <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
+                <div class="input-group">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-home search search-icon"></span></button>
+                      </span>
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-menu-hamburger search search-icon"></span></button>
+                  </span>
+                </div>
+            </div>
+        </div>
+        <!--<div class="row top-buffer">
+            <div class="col-md-offset-0 col-sm-offset-0">
+              <img src="data/logo.png" class="logo login-logo" ></img>
+            </div>
+        </div>-->
+        <div class="row top-buffer">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <h3 class="text-center media-heading">Please enter pack details</h3>
+                </div>
+                <!--<div class="container2">
+                    <div class="row">
+                        <div class="form-group offeredPrice col-md-6">
+                            <input id="offeredPrice" class="form-control" type="number" name="offeredPrice" value="OFFERED PRICE (PLN)">
+                        </div>
+                        <div class="form-group mass col-md-6">
+                            <input id="mass" class="form-control" type="number" name="mass" value="MASS (kg)">
                         </div>
                     </div>
-			</div>
+                </div>-->
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" for="firstName">Offerd price</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="offeredPrice" class="form-control" type="text" name="offeredPrice" placeholder="OFFERED PRICE (PLN)">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" for="firstName">Pack Mass</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="mass" class="form-control" type="text" name="mass" placeholder="MASS (kg)">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" for="firstName">Pack Height</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="height" class="form-control" type="text" name="height" placeholder="HEIGHT (cm)">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" for="firstName">Pack Width</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="width" class="form-control" type="text" name="width" placeholder="WIDTH (cm)">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" for="firstName">Pack length</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="length" class="form-control" type="text" name="length" placeholder="LENGTH (cm)">
+                    </div>
+                </div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-        <script src="data/FulfillmentOfTheOrder_SenderPage.js"></script>
-	</body>
+
+                <div class="text-center reset-margin-bottom form-group">
+                    <h3>Deliver until:</h3>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="date" class="form-control" type="date" name="date" placeholder="DATE">
+                    </div>
+                </div>
+
+
+                <div class="text-center reset-margin-bottom form-group">
+                    <h3>Deliver from:</h3>
+                </div>
+
+
+                <div class="form-group">
+                    <div class="">
+                        <button type="submit" class="btn btn-primary submit-button">LOCALIZE ME!</button>
+                    </div>
+                </div>
+
+                <div id="choose_button" class="form-group">
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input class="form-control" type="button" value="CHOOSE OTHER LOCATION"">
+                    </div>
+                </div>
+
+
+                <div id="div_ctrl" hidden>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Start city</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="city1" class="form-control" type="text" name="city1" placeholder="CITY">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Start street</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="street1" class="form-control" type="text" name="street1" placeholder="STREET">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Start number</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="number1" class="form-control" type="text" name="number1" placeholder="NUMBER">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Start postal-code</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="postal1" class="form-control" type="text" name="postal1" placeholder="POSTAL CODE">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center reset-margin-bottom form-group">
+                    <h3>Deliver to:</h3>
+                </div>
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Target city</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="city2" class="form-control" type="text" name="city2" placeholder="CITY">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Target street</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="street2" class="form-control" type="text" name="street2" placeholder="STREET">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Target number</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="number2" class="form-control" type="text" name="number2" placeholder="NUMBER">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-md-2 control-label" for="firstName">Target postal-code</label>
+                        <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                            <input id="postal2" class="form-control" type="text" name="postal2" placeholder="POSTAL CODE">
+                        </div>
+                    </div>
+
+                <div class="form-group">
+                    <div class="">
+                        <button type="button" onclick="location.href='SuccesSendingPage.html'"
+                                class="btn btn-primary submit-button">SUBMIT
+                        </button>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="">
+                        <button type="button" onclick="location.href='SenderPage.html'" class="btn submit-button">
+                            CANCEL
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+<script src="data/FulfillmentOfTheOrder_SenderPage.js"></script>
+</body>
 </html>
