--- a/FulfillmentOfTheOrder_DeliverPage.html
+++ b/FulfillmentOfTheOrder_DeliverPage.html
@@ -1,72 +1,91 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Fulfillment - DeliverPage</title>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+    <title>Fulfillment - DeliverPage</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link href="data/FulfillmentOfTheOrder_DeliverPage.css" type="text/css" rel="stylesheet"/>
-	</head>
-	<body>
-			<div class="container">
-                <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <!--<div class="row top-buffer">
-    				    <div class="col-md-offset-0 col-sm-offset-0">
-                		  <img src="data/logo.png" class="logo login-logo" ></img>
-            		    </div>
-                    </div>-->
-                    <div class="row top-buffer">
-                        <form class="form-horizontal">
-                            <div class="reset-margin-bottom form-group">
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 1 </li>
-                                </ul>
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                                <div class="panel panel-default">
-                                    <div class="panel-body" id="boxes">Deliver from KRAKOW to WARSAW unitil 12.05.2018</div>
-                                </div>
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                                <img src="data/map.png" class="map map-map" ></img>
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                                <div class="panel panel-default">
-                                    <div class="panel-body" id="boxes">PACKAGE DETAILS: mass, type, size </div>
-                                </div>
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><span class="glyphicon glyphicon glyphicon-usd"></span> OFFERED INCOME (PLN) </li>
-                                </ul>
-                            </div>
-                            <div class="form-group">
-                                <div class="">
-                                    <button type="button" onclick="location.href='SuccesDeliveryPage.html'" class="btn btn-primary submit-button">SUBMIT</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="">
-                                    <button type="button" onclick="location.href='DeliverPage.html'" class="btn submit-button">CANCEL</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="center">
-                                <h5>PaczPaczCar 2018</h5>
-                            </div>
-                            </form>
-                        </div>    
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+<div class="container">
+    <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
+        <div class="row search-bar">
+            <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
+                <div class="input-group">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-home search search-icon"></span></button>
+                      </span>
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default white-backgound" type="button"> <span class="glyphicon glyphicon-menu-hamburger search search-icon"></span></button>
+                  </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-12 col-sm-12 col-xs-12 offset-down">
+            <div class="row top-buffer">
+                <form class="form-horizontal">
+                    <div class="reset-margin-bottom form-group">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><span class="glyphicon glyphicon-inbox box"></span> Paczka 1</li>
+                        </ul>
+                    </div>
+                    <div class="reset-margin-bottom form-group">
+                        <div class="panel panel-default">
+                            <div class="panel-body" id="boxes">Deliver from KRAKOW to WARSAW unitil 12.05.2018</div>
                         </div>
                     </div>
-			</div>
-	</body>
+                    <div class="text-center reset-margin-bottom form-group">
+                        <img src="data/map.png" class="map map-map"/>
+                    </div>
+                    <div class="reset-margin-bottom form-group">
+                        <div class="panel panel-default">
+                            <div class="panel-body" id="boxes">PACKAGE DETAILS: mass, type, size</div>
+                        </div>
+                    </div>
+                    <div class="reset-margin-bottom form-group">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><span class="glyphicon glyphicon glyphicon-usd"></span> OFFERED
+                                INCOME (PLN)
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="form-group">
+                        <div class="">
+                            <button type="button" onclick="location.href='SuccesDeliveryPage.html'"
+                                    class="btn btn-primary submit-button">SUBMIT
+                            </button>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="">
+                            <button type="button" onclick="location.href='DeliverPage.html'" class="btn submit-button">
+                                CANCEL
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</body>
 </html>
