--- a/LogoutPage.html
+++ b/LogoutPage.html
@@ -30,21 +30,14 @@
                     <div class="message-container">
                         <div class="panel-body" id="boxes">
                             <span class="glyphicon glyphicon-ok search"></span><br>
-                            <span>You successfully send a package!</span>
+                            <span>You successfully logout!</span>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div>
-                        <button type="button" onclick="location.href='SenderPage.html'"
-                                class="btn btn-primary submit-button">Continue sending
-                        </button>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div>
-                        <button type="button" onclick="location.href='LandingPage.html'"
-                                class="btn btn-primary submit-button">Go to main menu
+                        <button type="button" onclick="location.href='index.html'"
+                            class="btn btn-primary submit-button">Log again
                         </button>
                     </div>
                 </div>
