--- a/OrderHistoryDetailsPage.html
+++ b/OrderHistoryDetailsPage.html
@@ -60,26 +60,9 @@
         </div>
 
         </div>
-        <div class="row top-buffer">
-            <div class="panel panel-default data-container">
-                <div class="panel-body" id="boxes">PACK READY TO BE DELIVERED IN YOUR'S NEIGHBORHOOD</div>
-            </div>
-            <div class="panel panel-default data-container">
-                <div class="panel-body" id="boxes">DELIVERERS IN OUR NEAR AREA</div>
-            </div>
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <button id="button" type="button" onclick="location.href='SenderPage.html'"
-                            class="btn btn-primary submit-button">SEND A PACK
-                    </button>
-                </div>
-                <div class="form-group">
-                    <button id="button" type="button" onclick="location.href='DeliverPage.html'"
-                            class="btn btn-primary submit-button">DELIVER A PACK
-                    </button>
-                </div>
-            </form>
-        </div>
+    <div class="row top-buffer">
+        #here should by order history
+    </div>
     </div>
 </div>
 </body>
