--- a/LandingPage.html
+++ b/LandingPage.html
@@ -22,16 +22,28 @@
     <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+<div class="row">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <span class="glyphicon glyphicon-th-list nav-icon"></span>     
+                  </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <span class="glyphicon glyphicon-search nav-icon"></span>
+                    </li>
+                    <li>
+                    <span class="glyphicon glyphicon-user nav-icon"></span>
+                    </li>
+                </ul>
+                </nav>
+                </div>
+        </div>
 <div class="container">
     <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="row top-buffer">
-            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
-                <span class="glyphicon glyphicon-search search"></span>
-            </div>
-            <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                <span class="glyphicon glyphicon-user search"></span>
-            </div>
-        </div>
+        
         <hr width="100%"/>
         <div class="row top-buffer">
                 <div class="panel panel-default">
